menu registro entrada

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/main_menu.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/main_menu.xml
@@ -4,6 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/BtnRegistrarEntrada"
+            style="@style/SagasTheme.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_effect"
+            android:text="@string/registrar_entrada"
+            android:textColor="@color/colorTextButtonLogin"
+            android:textSize="18sp" />
+    </LinearLayout>-->
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
