--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/menu/main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/menu/main.xml
@@ -2,6 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/RegistrarEntrada"
+        android:icon="@mipmap/registro_entradauno"
+        android:orderInCategory="1"
+        android:title=""
+        android:visible="true"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/libres"
         android:icon="@mipmap/ic_libre"
         android:orderInCategory="1"
@@ -16,12 +23,14 @@
         android:title=""
         android:visible="false"
         app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/salir"
         android:checkable="false"
         android:icon="@drawable/ic_action_logout"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title=""
         android:visible="true"
         app:showAsAction="ifRoom" />
+
 </menu>
