Ajustes catalogo clientes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarCliente.cshtml
@@ -251,70 +251,74 @@
                     </div>
                 </div>
                 <div class="row clearfix">
-                    <div class="card">
-                        <div class="header">
-                            <h2><strong>Condición del crédito y descuento</strong></h2>
-                        </div>
-                        <div class="body">
-                            <div class="row clearfix">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        Límite de crédito:
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="card">
+                            <div class="header">
+                                <h2><strong>Condición del crédito y descuento</strong></h2>
+                            </div>
+                            <div class="body">
+                                <div class="row clearfix">
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            Límite de crédito:
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        Litros de Credito<input name="limiteCreditoMonto" class="form-control" value="@Model.limiteCreditoMonto" type="number" />
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            Litros de Credito<input name="limiteCreditoMonto" class="form-control" value="@Model.limiteCreditoMonto" type="number" />
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <div>
-                                            Días para pagar
-                                            <input name="limiteCreditoDias" class="form-control" value="@Model.limiteCreditoDias" type="number" />
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <div>
+                                                Días para pagar
+                                                <input name="limiteCreditoDias" class="form-control" value="@Model.limiteCreditoDias" type="number" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <div>
+                                                Credito disponible (En litros):
+                                                <input name="CreditoDisponibleMonto" class="form-control" value="@Model.CreditoDisponibleMonto" type="number" />
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <div>
-                                            Credito disponible (En litros):
-                                            <input name="CreditoDisponibleMonto" class="form-control" value="@Model.CreditoDisponibleMonto" type="number" />
+                                <div class="row clearfix">
+                                    <div class="col-md-3" style="max-width:15.666667%">
+                                        <div class="form-group">
+                                            <div>
+                                                Descuento:
+                                                <input name="DescuentoXKilo" value="@Model.DescuentoXKilo" class="form-control" type="number" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2">
+                                        ¿Es Precio fijo?
+                                        <div class="form-group">
+                                            <label class="switch">
+                                                @Html.CheckBoxFor(m => m.EsFijo, new { @class = "form-control" })
+                                                <span class="slider round"></span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        Autorizar ventas con límite de crédito excedido
+                                        <div class="form-group center">
+                                            <label class="switch">
+                                                @Html.CheckBoxFor(m => m.VentaExtraordinaria, new { @class = "form-control" })
+                                                <span class="slider round"></span>
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row clearfix">
-                                <div class="col-md-3" style="max-width:15.666667%">
-                                    <div class="form-group">
-                                        <div>
-                                            Descuento:
-                                            <input name="DescuentoXKilo" class="form-control" type="number" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-2">
-                                    ¿Es Precio fijo?
-                                    <div class="form-group">
-                                        <label class="switch">
-                                            @Html.CheckBoxFor(m => m.EsFijo, new { @class = "form-control" })
-                                            <span class="slider round"></span>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    Autorizar ventas con límite de crédito excedido
-                                    <div class="form-group center">
-                                        <label class="switch">
-                                            @Html.CheckBoxFor(m => m.VentaExtraordinaria, new { @class = "form-control" })
-                                            <span class="slider round"></span>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
+                        </div>
+
+                    
                     </div>
-                </div>
                 <div class="row clearfix">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
