--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -278,7 +278,7 @@
                                         <tr>
                                             <th>Ticket</th>
                                             <th>Cliente</th>
-                                            <th>Importe</th>
+                                            <th>Importe ($)</th>
                                             <th>Días de adeudo</th>
                                         </tr>
                                     </thead>
