--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/Ventas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/Ventas.cshtml
@@ -49,7 +49,7 @@
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-md-3">
-                                    <strong>Al dia</strong>
+                                    <strong>Del dia</strong>
                                     <div class="form-group">
                                         @Html.DevExpress().DateEdit(settings =>
                                         {
