--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
@@ -15,8 +15,17 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
+    @*<link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />*@
     <script src="~/Scripts/js/CuentasContablesJS.js"></script>
+    <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+    <script src="~/assets/js/pages/ui/notifications.js"></script>
+
+    <script type="text/javascript">
+        var mensaje = '@ViewBag.Msj';
+        if (mensaje != '') {
+            $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
+        };
+    </script>
 </head>
 <body style="padding-top:10px;">
 
@@ -50,14 +59,14 @@
                                     <Label class="alert-danger" hidden="hidden">Campo requerido</Label>
                                     <div class="form-group">
                                         @*@Html.ValidationMessageFor(m => m.Numero, "", new { @class = "alert-danger",@value=0})
-                                        @Html.HiddenFor(m => m.Numero)*@
+                                            @Html.HiddenFor(m => m.Numero)*@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <b>Descripción</b>
                                         @Html.TextBoxFor(m => m.Descripcion, new { @class = "form-control", placeholder = "Descripción" })
-               
+
                                     </div>
                                     <div class="form-group">
                                         @*@Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger", @value = string.Empty })*@
