--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
@@ -6,7 +6,7 @@
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
             new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
-            
+
         )
 @Html.DevExpress().GetScripts(
             new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
@@ -17,15 +17,22 @@
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
 }
 @*<script language="JavaScript" type="text/javascript" src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>*@
-<script language="JavaScript" type="text/javascript">
-    $(function () {
-        $('#ddlEmpresasFilter').on('change', function () {
-            var id = $(this).val();
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
 
-            var url = '@Url.Action("Producto", "Producto", new { idempresa = "__param__" })';
-            window.location.href = url.replace('__param__', encodeURIComponent(id));
-        });
+<script type="text/javascript">
+    var mensaje = '@ViewBag.Msj';
+    if (mensaje != '') {
+        $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
+    };
+
+    $('#ddlEmpresasFilter').on('change', function () {
+        var id = $(this).val();
+
+        var url = '@Url.Action("Producto", "Producto", new { idempresa = "__param__" })';
+        window.location.href = url.replace('__param__', encodeURIComponent(id));
     });
+    
     function ChangeProdServ(s, e) {
         var sel = s.GetValue();
         if (sel == 2) {
@@ -54,7 +61,7 @@
         @using (Html.BeginForm("CrearProducto", "Producto", FormMethod.Post))
         {
             @Html.HiddenFor(m => m.IdProducto)
-            @Html.HiddenFor(m =>m.EsGas)
+            @Html.HiddenFor(m => m.EsGas)
             <div class="block-header">
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-12">
@@ -106,7 +113,6 @@
                                                 settings.SelectedIndex = 0;
                                                 settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                                 settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                                //settings.Properties.ValueType = typeof(string);
                                                 settings.Properties.Items.Add("Seleccione uno", "0");
                                                 settings.Properties.Items.Add("Producto", "2");
                                                 settings.Properties.Items.Add("Servicio", "3");
@@ -221,7 +227,6 @@
                                         <div id="divServ" style="display:none">
                                             <div class="form-group">
                                                 @Html.CheckBoxFor(m => m.EsTransporteGas, new { id = "cbServicioTransporte" })
-                                                @*<input id="cbServicioTransporte" name="EsTransporteGas" type="checkbox">*@
                                                 <label for="cbServicioTransporte" class="z-index:8">
                                                     ¿Es Servicio de transporte?
                                                 </label>
@@ -230,19 +235,10 @@
                                         <div id="divProd" style="display:none">
                                             <div class="form-group">
                                                 @Html.CheckBoxFor(m => m.EsActivoVenta, new { id = "cbActivoVenta" })
-                                                @*<input id="cbActivoVenta" name="EsActivoVenta" type="checkbox">*@
                                                 <label for="cbActivoVenta">
                                                     ¿Es activo de venta?
                                                 </label>
                                             </div>
-
-                                            @*<div class="form-group">
-                                                @Html.CheckBoxFor(m => m.EsGas, new { id = "cbEsGas" })
-                                                <input id="cbEsGas" name="EsGas" type="checkbox">
-                                                <label for="cbEsGas">
-                                                    ¿Es Gas?
-                                                </label>
-                                            </div>*@
                                         </div>
                                         <div><b>Almacén</b></div>
                                         <div class="row">
@@ -296,7 +292,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="row clearfix">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
@@ -334,82 +329,10 @@
                                             <input type="text" class="form-control" disabled value="@ViewBag.Empresas" />
                                         }
                                     </div>
-                                    <div class="col-md-4">
-                                        @*<div class="form-group">
-                                                <input type="text" placeholder="Buscar" id="txtNumeroFiltro" class="form-control" />
-                                            </div>*@
-                                    </div>
                                 </div><br />
                                 <div class="row clearfix blockquote blockquote-info btn-round">
-                                    
                                     @Html.Partial("_CB_Productos", (List<ProductoDTO>)TempData["DataSourceProductos"])
-                                    @*<div class="table-responsive">
-                                            <table class="table table-striped table-hover filterable" name="RequisicionProductos">
-                                                <thead>
-                                                    <tr>
-                                                        <td><b>Tipo</b></td>
-                                                        <td><b>Categoría</b></td>
-                                                        <td><b>Línea</b></td>
-                                                        <td><b>Descripción</b></td>
-                                                        <td><b>Unidad de Medida</b></td>
-                                                        <td><b>Activo Venta</b></td>
-                                                        <td><b>Es Gas</b></td>
-                                                        <td><b>Es Transporte</b></td>
-                                                        <td><b>Acción</b></td>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    @foreach (var prod in ViewBag.Productos)
-                                                    {
-                                                        <tr>
-                                                            <td>@prod.TipoProducto </td>
-                                                            <td>@prod.Categoria </td>
-                                                            <td>@prod.ProductoLinea</td>
-                                                            <td>@prod.Descripcion</td>
-                                                            <td>@prod.UnidadMedida</td>
-                                                            @if (prod.UnidadMedida)
-                                                            {
-                                                                <td>Si</td> }
-                                                            else
-                                                            {
-                                                                <td>No</td> }
-                                                            @if (prod.EsGas)
-                                                            {
-                                                                <td>Si</td> }
-                                                            else
-                                                            {
-                                                                <td>No</td>}
-                                                            @if (prod.EsTransporteGas)
-                                                            {
-                                                                <td>Si</td> }
-                                                            else
-                                                            {
-                                                                <td>No</td>}
-
-                                                            <td>
-                                                                <a href="@Url.Action("EditarProducto", "Producto" , new { Id=prod.IdProducto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                    <i class="material-icons">edit</i>
-                                                                    <span>Editar  producto</span>
-                                                                </a>
-                                                                <a href="@Url.Action("EliminarProducto", "Producto" , new { Id=prod.IdProducto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                    <i class="material-icons">delete</i>
-                                                                    <span>Eliminar producto</span>
-                                                                </a>
-                                                            </td>
-                                                        </tr>
-                                                    }
-                                                </tbody>
-                                            </table>
-                                        </div>*@
                                 </div>
-                                @*<div class="row clearfix">
-                                        <div class="col-md-6">
-                                            Página @(ViewBag.Productos.PageCount < ViewBag.Productos.PageNumber ? 0 : ViewBag.Productos.PageNumber) de @ViewBag.Productos.PageCount
-                                        </div>
-                                        <div class="col-md-6 text-right">
-                                            @Html.PagedListPager((IPagedList)ViewBag.Productos, page => Url.Action("Producto", new { page, @class = "btn btn-primary btn-simple" }))
-                                        </div>
-                                    </div>*@
                             </div>
                         </div>
                     </div>
@@ -418,4 +341,3 @@
         }
     </div>
 </section>
-<script src="~/Scripts/js/CProductoJS.js"></script>
