--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/UnidadMedida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/UnidadMedida.cshtml
@@ -18,7 +18,15 @@
 }
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
 <script language="JavaScript" type="text/javascript" src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
-<script>
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
+
+<script type="text/javascript">
+    var mensaje = '@ViewBag.Msj';
+    if (mensaje != '') {
+        $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
+    };
+
     $(document).ready(function () {
         $(".filterable tr:has(td)").each(function () {
             var t = $(this).text().toLowerCase();
