--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -23,10 +23,14 @@
     <script src="~/assets/js/pages/tables/jquery-datatable.js"></script>*@
 <script src="~/Scripts/js/RequisicionesJS.js"></script>
 <script type="text/javascript">
-    var Mensaje = '@ViewBag.Msj';F
+    var Mensaje = '@ViewBag.Msj';
     var tipo = '@ViewBag.Tipo';
     if (Mensaje != '') {
         $(window).on("load", showNotification(tipo, Mensaje, 'top', 'center', '', ''));
+    }
+    function ChagedEmpresa() {
+        alert(document.getElementById("empresas").value);
+        location.replace("/Requisicion/Requisiciones?id=" + document.getElementById("empresas").value)
     }
 </script>
 
@@ -63,7 +67,7 @@
                                     <div class="col-sm-4">
                                         @if (ViewBag.EsAdmin)
                                         {
-                                            <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                            <select id="empresas" name="IdEmpresa" onchange="ChagedEmpresa();" class="form-control show-tick" data-live-search="true">
                                                 <option value="0">Seleccione una gasera</option>
                                                 @foreach (var lst in ViewBag.Empresas)
                                                 {
