--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -17,12 +17,9 @@
     <link href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
-    @*<link rel="stylesheet" href="~/assets/plugins/morrisjs/morris.css">*@
     <script src="~/assets/plugins/chartjs/Chart.min.js"></script>
     <link href="~/Content/Site.css" rel="stylesheet" />
     <script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
-
-
 </head>
 <body class="theme-black menu_dark">
     @RenderBody()
@@ -120,8 +117,8 @@
 
                             <li class="menu_dark"><a href="@Url.Action("Index", "Historico")"><i class="material-icons">receipt </i><span class="icon-name">Historico Ventas</span> </a></li>
 
-                            @*<li>
-                                    <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">receipt</i><span>Historico Ventas</span> </a>
+                      @*<li>
+                                    <a href="javascript:void(0);      " class="menu-toggle"><i class="material-icons">receipt</i><span>Historico Ventas</span> </a>
                                     <ul class="ml-menu">
                                         <li>@Html.ActionLink("Carga Informacion", "Index", "Historico")</li>
 
@@ -378,13 +375,11 @@
 <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
 <script src="~/assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
-
+<script src="~/assets/js/pages/ui/notifications.js"></script>
 <script src="~/assets/plugins/jquery-knob/jquery.knob.min.js"></script>
 @*<script src="~/assets/js/pages/charts/morris.js"></script>*@
-
 <script src="~/assets/js/pages/charts/jquery-knob.js"></script>
 <script src="~/assets/plugins/momentjs/moment.js"></script>
 <script src="~/assets/bundles/mainscripts.bundle.js"></script>
-
 
 @Styles.Render("~/Content/css")
