--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarLocaciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarLocaciones.cshtml
@@ -292,7 +292,7 @@
                                             <div class="form-group">
                                                 <div>
                                                     <label for="txtNume">
-                                                        Referencia Google Maps:*
+                                                        Referencia*
                                                     </label>
                                                 </div>
                                             </div>
